--- a/Cyberpunk_City.uproject
+++ b/Cyberpunk_City.uproject
@@ -26,6 +26,10 @@
 		{
 			"Name": "ModelingToolsEditorMode",
 			"Enabled": true
+		},
+		{
+			"Name": "ActorPalette",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
