Polishing and sharpening the map

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -51,7 +51,7 @@ r.DefaultFeature.MotionBlur=True
 r.DefaultFeature.LensFlare=False
 r.TemporalAA.Upsampling=False
 r.SSGI.Enable=False
-r.AntiAliasingMethod=4
+r.AntiAliasingMethod=2
 r.DefaultFeature.LightUnits=2
 r.DefaultBackBufferPixelFormat=4
 r.Shadow.UnbuiltPreviewInGame=True
@@ -123,6 +123,7 @@ r.Shadow.Virtual.Enable=1
 r.Lumen.HardwareRayTracing=True
 r.Lumen.TraceMeshSDFs=0
 r.VelocityOutputPass=0
+r.MSAACount=8
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Mobile
@@ -140,7 +141,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/VRTemplate/Maps/VRTemplateMap.VRTemplateMap
+GameDefaultMap=/Game/Cyberpunk/Maps/CommercialDistrict_12.CommercialDistrict_12
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/VRTemplate/Blueprints/VRGameMode.VRGameMode_C
 GlobalDefaultServerGameMode=None
