--- a/Cyberpunk_City.uproject
+++ b/Cyberpunk_City.uproject
@@ -30,6 +30,10 @@
 		{
 			"Name": "ActorPalette",
 			"Enabled": true
+		},
+		{
+			"Name": "MovieRenderPipeline",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
